--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 'Pintereso is a free Jekyll theme for awesome people like you, Pint
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 #baseurl: '/jagarian1/pintereso-jerome'
-baseurl: 'jagarian1.github.io/jagarian1/pintereso-jerome'
+baseurl: '/jagarian1.github.io/jagarian1/pintereso-jerome'
 url: ""
 avatar: 'assets/images/sal.jpg'
 disqus: 'jeromemi'
