--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ name: 'Pintereso'
 description: 'Pintereso is a free Jekyll theme for awesome people like you, Pinterest like.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-#baseurl: '/jagarian1/pintereso-jerome'
-baseurl: '/jagarian1.github.io/jagarian1/pintereso-jerome'
+#baseurl: '/pintereso-jerome'
+baseurl: '/pintereso-jerome/'
 url: ""
 avatar: 'assets/images/sal.jpg'
 disqus: 'jeromemi'
